<resources>
    <string name="app_name">Super App</string>
    <string name="sign_in_with_phone">sign in with phone</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="super_app">Super App</string>
    <string name="logout">Logout</string>
    <string name="jee">JEE</string>
    <string name="entrance_exam">Entrance Exam</string>
    <string name="higher_education">Higher Education</string>
    <string name="university">University</string>
    <string name="jee_advance">jee advance</string>
    <string name="neet">neet</string>
    <string name="upsc">UPSC</string>
    <string name="cat">cat</string>
    <string name="gate">gate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="link">Jee official Website Link : </string>
    <string name="content">Content : </string>
    <string name="youtbe_link">Youtube Link : </string>
    <string name="_1">1. Maths :</string>
    <string name="_2_physics">2. Physics :</string>
    <string name="_3_chemistry">3. Chemistry :</string>
    <string name="reference_book">reference Book :</string>
    <string name="jee_news">Jee News : </string>
    <string name="Neet_news">Neet News : </string>
    <string name="jee_advance_website_link">Jee Advance Website Link : </string>
    <string name="Neet_website_link">Neet Website Link : </string>
    <string name="_1_biology">1. Biology :</string>
    <string name="academics">Academics</string>
    <string name="social_media">Social Media</string>
    <string name="news">News</string>
    <string name="enter_youtube_link">Enter Youtube Link</string>
    <string name="instagram_link_paste">Instagram Link Paste</string>
    <string name="paste">Paste</string>
    <string name="new_heading">New Heading</string>
    <string name="sub_heading">Sub heading</string>
    <string name="articles">Articles</string>
    <string name="news_website">News Website</string>
    <string name="bbc">BBC</string>
    <string name="zee_business">Zee Business</string>
    <string name="aaj_tak">Aaj Tak</string>
    <string name="abp_news">ABP News</string>
    <string name="news_24">News 24</string>
    <string name="republic_tv">Republic TV</string>
    <string name="youtube_video_downloader">Youtube Video Downloader</string>
    <string name="what_s_app_stats_saver">What\'s App Stats Saver</string>
    <string name="what_s_app">What\'s App</string>
    <string name="download">Download</string>
    <string name="sports">Sports</string>
    <string name="fifa">FIFA</string>
    <string name="icc">ICC</string>
    <string name="top_5_icc_members">Top 5 ICC Members</string>
    <string name="bcc">BCC</string>
    <string name="ecb">ECB</string>
    <string name="ca">CA</string>
    <string name="pcb">PCB</string>
    <string name="wi">WI</string>
    <string name="top_5_fifa_members">Top 5 FIFA Members</string>
    <string name="brazil">Brazil</string>
    <string name="belgium">Belgium</string>
    <string name="argentina">Argentina</string>
    <string name="france">France</string>
    <string name="england">England</string>
    <string name="upsc_offical_website_link">UPSC Offical website link :</string>
    <string name="current_events_of_national_and_international_importance">1.Current events of national and international importance :</string>
    <string name="upsc_syllabus_for_gs_paper_prelims_paper_i">1.UPSC Syllabus for GS Paper (Prelims Paper I)</string>
    <string name="_2_history_of_india_and_indian_national_movement">2.History of India and Indian National Movement :</string>
    <string name="_3_indian_and_world_geography_physical_social_economic_geography_of_india_and_the_world">3.Indian and World Geography :</string>
    <string name="_7_general_science">7.General Science :</string>
    <string name="_6_general_issues_on_environmental_ecology_biodiversity_and_climate_change">6.General issues on Environmental Ecology, Biodiversity, and Climate Change :</string>
    <string name="_5_economic_and_social_development">5.Economic and Social Development</string>
    <string name="_4_indian_polity_and_governance">4.Indian Polity and Governance</string>
    <string name="upsc_news">UPSC NEWS : </string>
    <string name="_2_upsc_syllabus_for_csat_paper_prelims_paper_ii">2.UPSC Syllabus for CSAT Paper (Prelims Paper-II)</string>
    <string name="_6_basic_numeracy_and_data_interpretation">6.Basic numeracy and Data interpretation</string>
    <string name="_5_general_mental_ability">5.General mental ability</string>
    <string name="_4_decision_making_and_problem_solving">4.Decision-making and problem solving</string>
    <string name="_3_logical_reasoning_and_analytical_ability">3.Logical reasoning and analytical ability</string>
    <string name="_2_interpersonal_skills_including_communication_skills">2.Interpersonal skills including communication skills</string>
    <string name="_1_comprehension">1.Comprehension</string>
    <string name="jee_syllabus_weightage">jee syllabus weightage</string>
    <string name="neet_syllabus_weightage">neet syllabus weightage</string>
    <string name="_2_jee_main_2023_syllabus_with_weightage_for_chemistry_topic_chapter_wise">3.JEE Main 2023 Syllabus with Weightage for Chemistry (Topic/Chapter wise)</string>
    <string name="_2_jee_main_syllabus_with_weightage_for_mathematics_topic_chapter_wise">2.JEE Main Syllabus with Weightage for Mathematics (Topic/Chapter wise)</string>
</resources>