<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sports.iccCategories">

    <include
        android:id="@+id/toolbar"
        layout="@layout/cutom_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/entranceexam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/alike_angular"
                android:text="@string/top_5_icc_members"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/BCC"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/alegreya_sc"
                android:gravity="center"
                android:text="@string/bcc"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:cornerRadius="15dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ECB"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/alegreya_sc"
                android:gravity="center"
                android:text="@string/ecb"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:cornerRadius="15dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/CA"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/alegreya_sc"
                android:gravity="center"
                android:text="@string/ca"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:cornerRadius="15dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/PCB"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/alegreya_sc"
                android:gravity="center"
                android:text="@string/pcb"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:cornerRadius="15dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/WI"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/alegreya_sc"
                android:gravity="center"
                android:text="@string/wi"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:cornerRadius="15dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>